--- a/_posts/2025-05-24-sup.md
+++ b/_posts/2025-05-24-sup.md
@@ -7,9 +7,16 @@ background: ''
 draft: false
 session: 0
 ---
-Yope
 
-# Foo
+This is a test post to demonstrate the custom glossary tooltips.
+
+# Testing Glossary Tooltips
+
+Here we can reference {% include glossary_tooltip.html term="Aldyhn" %}, the goddess of wisdom, or mention {% include glossary_tooltip.html term="Vani" %} in our adventures.
+
+We can also use custom display text like {% include glossary_tooltip.html term="Gnark und Idin" text="the twin gods" %}.
 
 ## Bar
+
+This should work with GitHub Pages since it only uses Liquid includes and no custom plugins!
 
