Test pre-commit hook automation

--- a/_posts/2025-05-24-sup.md
+++ b/_posts/2025-05-24-sup.md
@@ -14,7 +14,7 @@ This is a test post to demonstrate the custom glossary tooltips.
 
 Here we can reference {% include glossary_tooltip.html term="Aldyhn" %}, the goddess of wisdom, or mention {% include glossary_tooltip.html term="Vani" %} in our adventures.
 
-We can also use custom display text like {% include glossary_tooltip.html term="Gnark und Idin" text="the twin gods" %}.
+We can also use custom display text like {% include glossary_tooltip.html term="Gnark und Idin" %}.<br><a class="jekyll-glossary-source-link" href="/glossary/?search=Gnark+und+Idin" target="_blank"></a></span></span>..
 
 ## Bar
 
