--- a/_posts/2025-06-16-cms-test.md
+++ b/_posts/2025-06-16-cms-test.md
@@ -7,6 +7,6 @@ categories: test
 
 This post simulates content created via Sveltia CMS that contains raw glossary terms.
 
-The content mentions {% include glossary_tooltip.html term="Aldyhn" %} and discusses the role of {% include glossary_tooltip.html term="Vani" %} in the story. We also reference {% include glossary_tooltip.html term="Gnark und Idin" %} as important figures, while {% include glossary_tooltip.html term="Knat" %} represents competitive spirit.
+The content mentions Aldyhn and discusses the role of Vani in the story. We also reference Gnark und Idin as important figures, while Knat represents competitive spirit.
 
 This should be automatically processed by GitHub Actions when committed to main branch!
