--- a/_posts/2025-05-24-sup.md
+++ b/_posts/2025-05-24-sup.md
@@ -20,3 +20,5 @@ We can also use custom display text like Gnark und Idin.
 
 This should work with GitHub Pages since it only uses Liquid includes and no custom plugins!
 
+*Updated to trigger glossary processing*
+
