--- a/_posts/2025-06-16-cms-test.md
+++ b/_posts/2025-06-16-cms-test.md
@@ -9,4 +9,4 @@ This post simulates content created via Sveltia CMS that contains raw glossary t
 
 The content mentions Aldyhn and discusses the role of Vani in the story. We also reference Gnark und Idin as important figures, while Knat represents competitive spirit.
 
-This should be automatically processed by GitHub Actions when committed to main branch!
+This should be automatically processed by GitHub Actions when committed to main branch.
