Update Blog Posts “2025-06-16-cms-test”

--- a/_posts/2025-06-16-cms-test.md
+++ b/_posts/2025-06-16-cms-test.md
@@ -1,12 +1,14 @@
 ---
 layout: post
-title: "CMS Test Post"
+title: CMS Test Post
 date: 2025-06-16 14:00:00 +0200
 categories: test
+background: /assets/images/uploads/sydon.jpg
 ---
-
 This post simulates content created via Sveltia CMS that contains raw glossary terms.
 
 The content mentions Aldyhn and discusses the role of Vani in the story. We also reference Gnark und Idin as important figures, while Knat represents competitive spirit.
 
 This should be automatically processed by GitHub Actions when committed to main branch.
+
+The content mentions Aldyhn and discusses the role of Vani in the story. We also reference Gnark und Idin as important figures, while Knat represents competitive spirit.
