--- a/_posts/2025-05-24-sup.md
+++ b/_posts/2025-05-24-sup.md
@@ -12,9 +12,9 @@ This is a test post to demonstrate the custom glossary tooltips.
 
 # Testing Glossary Tooltips
 
-Here we can reference Aldyhn, the goddess of wisdom, or mention Vani in our adventures.
+Here we can reference {% include glossary_tooltip.html term="Aldyhn" %}, the goddess of wisdom, or mention {% include glossary_tooltip.html term="Vani" %} in our adventures.
 
-We can also use custom display text like Gnark und Idin.
+We can also use custom display text like {% include glossary_tooltip.html term="Gnark und Idin" %}.
 
 ## Bar
 
