--- a/_posts/2025-09-06-vers-3.md
+++ b/_posts/2025-09-06-vers-3.md
@@ -10,7 +10,7 @@ draft: false
 session: 3
 ---
 
-Der Kampf war so kurz wie brutal. Aaron, die Gestalt, die einst Aaron war, kämpfte beseelt von unheiliger Kraft. Selbst geköpft kämpfte sie fort. Und als sie endlich fiel, wollte Bjørn es nicht hinnehmen, sondern zerhackte ihren Leib in immer kleinere Stücke, bis Ove ihn endlich beruhgite. Doch schwerer als dieser Anblick wog die Frage: Hatte Hel, Herrin der Unterwelt, dieses Ungeheuer wissentlich aus dem Reich der Toten zurückgesandt? Bjørn wollte, konnte es nicht glauben. Aber Hrolf sah keine andere Erklärung.
+Der Kampf war so kurz wie brutal. Aaron, die Gestalt, die einst Aaron war, kämpfte beseelt von unheiliger Kraft. Selbst geköpft kämpfte sie fort. Und als sie endlich fiel, wollte Bjørn es nicht hinnehmen, sondern zerhackte ihren Leib in immer kleinere Stücke, bis Ove ihn endlich beruhigte. Doch schwerer als dieser Anblick wog die Frage: Hatte Hel, Herrin der Unterwelt, dieses Ungeheuer wissentlich aus dem Reich der Toten zurückgesandt? Bjørn wollte, konnte es nicht glauben. Aber Hrolf sah keine andere Erklärung.
 
 Und so verging die Nacht, und mit ihr der Sturm. Kudrun weckte die Gefährten mit klagenden Flötenklängen. Nichts blieb zu tun, als Aarons Reste mitsamt der Hütte den Flammen zu übergeben. Der Weg führte weiter gen Norden.
 
