--- a/_posts/2025-09-06-vers-3.md
+++ b/_posts/2025-09-06-vers-3.md
@@ -24,7 +24,7 @@ Und am Ende des Fjords lag das Ziel dieser Reise, mit dem Versprechen eines neue
 
 ![Nirgendwo](/assets/images/posts/vers-3/nirgendwo.webp)
 
-Am Eingang des Ortes saß eine alte Tieflingsfrau. Sie kaufte Finger- und Fußnägel, ein Kupferstück das Stück, und sprach von einem Schiff der Unterwelt, aus Nägeln gebaut, das sie zu verhindern suchte.
+Am Eingang des Ortes saß eine alte Tieflingsfrau mit dem Namen Egill. Sie kaufte Finger- und Fußnägel, ein Kupferstück das Stück, und sprach von einem Schiff der Unterwelt, aus Nägeln gebaut, das sie zu verhindern suchte.
 
 Weiter im Ort berichtete der Hafenmeister, dass Gulli und die Whar, wenige Tage nach dem Überfall am Turm, hier geankert hätten. Sie hätten Waffen gekauft, und seien davon gesegelt.
 
