--- a/_posts/2025-09-06-vers-3.md
+++ b/_posts/2025-09-06-vers-3.md
@@ -26,6 +26,6 @@ Und am Ende des Fjords lag das Ziel dieser Reise, mit dem Versprechen eines neue
 
 Am Eingang des Ortes saß eine alte Tieflingsfrau mit dem Namen Egill. Sie kaufte Finger- und Fußnägel, ein Kupferstück das Stück, und sprach von einem Schiff der Unterwelt, aus Nägeln gebaut, das sie zu verhindern suchte.
 
-Weiter im Ort berichtete der Hafenmeister, dass Gulli und die Whar, wenige Tage nach dem Überfall am Turm, hier geankert hätten. Sie hätten Waffen gekauft, und seien davon gesegelt.
+Weiter im Ort berichtete der Hafenmeister Celorfin, dass Gulli und die Whar, wenige Tage nach dem Überfall am Turm, hier geankert hätten. Sie hätten Waffen gekauft, und seien davon gesegelt.
 
 Doch Rache – oder welcher Plan jeder unserer Helden auch immer verfolgt – konnte warten. Einen Abend im Methaus, dem „Auge des Sturms“, hatten sie sich verdient.
