--- a/_posts/2025-09-06-vers-3.md
+++ b/_posts/2025-09-06-vers-3.md
@@ -14,7 +14,7 @@ Der Kampf war so kurz wie brutal. Aaron, die Gestalt, die einst Aaron war, kämp
 
 Und so verging die Nacht, und mit ihr der Sturm. Kudrun weckte die Gefährten mit klagenden Flötenklängen. Nichts blieb zu tun, als Aarons Reste mitsamt der Hütte den Flammen zu übergeben. Der Weg führte weiter gen Norden.
 
-Viele Tage verstrichen. Ove und Rejka wurden von Alpträumen heimgesucht. Kein Zeichen von Zivilisation, nur die Überreste einer Karavane, Skelette erschlagen und im Sand begraben.
+Viele Tage verstrichen. Ove und Rekja wurden von Alpträumen heimgesucht. Kein Zeichen von Zivilisation, nur die Überreste einer Karavane, Skelette erschlagen und im Sand begraben.
 
 Auf einem Hügel frei Sichte: nach Westen auf die Schlangensee, und erstmals auch nach Osten auf ein kochendes Meer aus Lava. Am Horizont Vulkane, das Ende der Welt.
 
