--- a/_posts/2025-09-06-vers-3.md
+++ b/_posts/2025-09-06-vers-3.md
@@ -16,7 +16,7 @@ Und so verging die Nacht, und mit ihr der Sturm. Kudrun weckte die Gefährten mi
 
 Viele Tage verstrichen. Ove und Rekja wurden von Alpträumen heimgesucht. Kein Zeichen von Zivilisation, nur die Überreste einer Karavane, Skelette erschlagen und im Sand begraben.
 
-Auf einem Hügel frei Sichte: nach Westen auf die Schlangensee, und erstmals auch nach Osten auf ein kochendes Meer aus Lava. Am Horizont Vulkane, das Ende der Welt.
+Auf einem Hügel freie Sicht: nach Westen auf die Schlangensee, und erstmals auch nach Osten auf ein kochendes Meer aus Lava. Am Horizont Vulkane, das Ende der Welt.
 
 Schließlich erreichten die Helden einen Fjord, dem sie nach Osten folgten. Bei der Durchquerung eines Flusses griffen Krokodile an, doch Kudrun sprach ihre Sprache, und so zogen sie sich zurück.
 
