--- a/_posts/2025-09-06-vers-3.md
+++ b/_posts/2025-09-06-vers-3.md
@@ -10,6 +10,14 @@ draft: false
 session: 3
 ---
 
+> _Grimnir ist ein hartes Land. Der Norden ist die Heimat von Inseln, bedeckt von Eis und Schnee, unaufhörlich von eisigen Winden gepeitscht, während die Lande im Süden von Vulkanen und zerklüfteten Lavafeldern überschwemmt werden. Der Schlangensee windet sich zwischen diesen beiden rauen Extremen hindurch und umschlingt die inneren Kontinente sowie unzählige Inseln._
+>
+> _Grimnir wurde aus Mirgals Opfer erschaffen, und es heißt, dass des Zauberers Schuld und Qual über seinen Verrat und sein Versagen der Grund dafür ist, warum die Welt so unbändig aufgewühlt ist. Nach dem Exodus breiteten sich die zähen Neuankömmlinge aus, und die Vanir errichteten ihre Hauptfeste auf dem zentralen Kontinent, auf dem geheimnisvollen Gebirgszug, den sie Turnfjall nannten. Jedes Jahr wachsen diese Berge noch höher, wachsen immer noch, als wären sie entschlossen, den Himmel zu durchstoßen, aus Gründen, die nicht einmal Götter ergründen könnten._
+>
+> _In diesem Land der Mythen und Legenden gelten seit Jahrhunderten unerschütterliche Gesetze: Die Tapferen sterben im Kampf und reisen zu den Hallen der Erschlagenen, wo sie bei den Vanir in ewiger Herrlichkeit weilen. Die anderen finden ihren Frieden in Hels Unterwelt, wo sie ruhen bis zum Ende aller Tage. So war es immer gewesen. So sollte es immer bleiben._
+>
+> _Manchmal stellen die kleinsten Ereignisse die größten Wahrheiten in Frage. Was sich an jenem stürmischen Tag an einem verlassenen Außenposten der Beissenden Sande ereignen sollte, sollte nicht nur das Weltbild eines legendären Helden und seiner Gefolgsleute erschüttern..._
+
 Der Kampf war so kurz wie brutal. Aaron, die Gestalt, die einst Aaron war, kämpfte beseelt von unheiliger Kraft. Selbst geköpft kämpfte sie fort. Und als sie endlich fiel, wollte Bjørn es nicht hinnehmen, sondern zerhackte ihren Leib in immer kleinere Stücke, bis Ove ihn endlich beruhigte. Doch schwerer als dieser Anblick wog die Frage: Hatte Hel, Herrin der Unterwelt, dieses Ungeheuer wissentlich aus dem Reich der Toten zurückgesandt? Bjørn wollte, konnte es nicht glauben. Aber Hrolf sah keine andere Erklärung.
 
 Und so verging die Nacht, und mit ihr der Sturm. Kudrun weckte die Gefährten mit klagenden Flötenklängen. Nichts blieb zu tun, als Aarons Reste mitsamt der Hütte den Flammen zu übergeben. Der Weg führte weiter gen Norden.
