--- a/_posts/2025-11-22-vers-8-jagd.md
+++ b/_posts/2025-11-22-vers-8-jagd.md
@@ -23,7 +23,7 @@ Der Triumph währte nur einen Atemzug, als in den Untiefen eine Seeschlange erwa
 
 Sie verbrannten die Gefallenen. Doch während die Flammen loderten, erhellte im fernen Norden ein greller Lichtblitz den Himmel über dem Meer: eine schmutzig-violette Wolke erhob sich wie ein giftiger Pilz, gefolgt von einer Druckwelle. Der Ausbruch eines neuen Vulkans.
 
-Oder, wie Rekja in düsterer Gewissheit sprach: der Beginn von Ragnarök. Die Jötun seien zurückgekehrt.
+Oder, wie Rekja in düsterer Gewissheit sprach: der Beginn von Ragnarök. Die Jötunn seien zurückgekehrt.
 
 Erschüttert kehrten die Helden zur *Grau* zurück. Die Mannschaft war in Aufruhr, doch Rekja spendete Mut, und so kehrte ein Funken Hoffnung in die Gesichter zurück.
 
